# calculator

./: .clang-tidy  CMakeLists.txt
src/: main.cpp
